--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -2,7 +2,7 @@
   padding: 20px;
 
   @media (min-width: @tablet-width) {
-    padding: 30px;
+    padding: 0 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -24,12 +24,18 @@
     position: absolute;
     box-sizing: border-box;
     text-decoration: none;
-    top: 370px;
+    top: 380px;
     width: 244px;
     margin: 0 0 0 90px;
     padding: 14px 30px 14px 38px;
     font-size: 20px;
     line-height: 20px;
+
+    @media (min-resolution: 2dppx) {
+      top: -42px;
+      position: relative;
+      margin: 0 0 526px 90px;
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -87,60 +93,69 @@
   }
 }
 
-.programs__loss::before {
-  content: "";
-  background-image: url("../img/cat_back--loss.svg");
-  background-repeat: no-repeat;
-  background-size: 50px 50px;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  left: 0;
-  top: -5px;
+.programs__loss {
+  position: relative;
 
-  @media (min-width: @tablet-width) {
-    background-size: 200px 211px;
-    width: 200px;
-    height: 211px;
-    left: 394px;
-    top: 0;
-  }
-
-  @media (min-width: @desktop-width) {
-    background-size: 100px 106px;
-    width: 100px;
-    height: 106px;
+  &::before {
+    content: "";
+    background-image: url("../img/cat_back--loss.svg");
+    background-repeat: no-repeat;
+    background-size: 50px 50px;
+    width: 50px;
+    height: 50px;
+    position: absolute;
     left: 0;
-    top: -35px;
+    top: -5px;
+
+    @media (min-width: @tablet-width) {
+      background-size: 200px 211px;
+      width: 200px;
+      height: 211px;
+      left: 394px;
+      top: 0;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-size: 100px 106px;
+      width: 100px;
+      height: 106px;
+      left: 0;
+      top: -35px;
+    }
   }
 }
 
-.programs__gain::before {
-  content: "";
-  background-image: url("../img/cat_back--gain.svg");
-  background-repeat: no-repeat;
-  width: 67px;
-  height: 50px;
-  left: -8px;
-  top: -5px;
-  position: absolute;
+.programs__gain {
+  position: relative;
 
-  @media (min-width: @tablet-width) {
-    background-size: 268px 200px;
-    width: 268px;
-    height: 200px;
-    left: 360px;
-    top: 0;
-  }
+  &::before {
+    content: "";
+    background-image: url("../img/cat_back--gain.svg");
+    background-repeat: no-repeat;
+    width: 67px;
+    height: 50px;
+    left: -8px;
+    top: -5px;
+    position: absolute;
 
-  @media (min-width: @desktop-width) {
-    background-size: 134px 100px;
-    width: 134px;
-    height: 100px;
-    left: -15px;
-    top: -35px;
+    @media (min-width: @tablet-width) {
+      background-size: 268px 200px;
+      width: 268px;
+      height: 200px;
+      left: 360px;
+      top: 0;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-size: 134px 100px;
+      width: 134px;
+      height: 100px;
+      left: -15px;
+      top: -35px;
+    }
   }
 }
+
 
 .programs__description {
   font-family: "Lato Regular", sans-serif;
