--- a/7/css/style.css
+++ b/7/css/style.css
@@ -724,6 +724,7 @@
 }
 @media (min-width: 768px) {
   .intro__img {
+    display: block;
     margin: 0;
   }
 }
@@ -739,7 +740,7 @@
 }
 @media (min-width: 768px) {
   .programs {
-    padding: 30px;
+    padding: 0 30px;
   }
 }
 @media (min-width: 1440px) {
@@ -762,12 +763,19 @@
     position: absolute;
     box-sizing: border-box;
     text-decoration: none;
-    top: 370px;
+    top: 380px;
     width: 244px;
     margin: 0 0 0 90px;
     padding: 14px 30px 14px 38px;
     font-size: 20px;
     line-height: 20px;
+  }
+}
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
+  .programs__button {
+    top: -42px;
+    position: relative;
+    margin: 0 0 526px 90px;
   }
 }
 @media (min-width: 1440px) {
@@ -824,6 +832,9 @@
     padding: 0 0 73px 162px;
   }
 }
+.programs__loss {
+  position: relative;
+}
 .programs__loss::before {
   content: "";
   background-image: url("../img/cat_back--loss.svg");
@@ -852,6 +863,9 @@
     left: 0;
     top: -35px;
   }
+}
+.programs__gain {
+  position: relative;
 }
 .programs__gain::before {
   content: "";
