--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -73,7 +73,7 @@
     border: 1px solid #cdcdcd;
     display: grid;
     padding: 26px 38px 28px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr) 90px;
 
     p {
       font-size: 16px;
@@ -152,7 +152,8 @@
   padding-bottom: 15px;
 
   @media (min-width: @tablet-width) {
-    grid-column: 2/3;
+    grid-column: 3/4;
+    text-align: right;
   }
 
   @media (min-width: @desktop-width) {
@@ -167,7 +168,7 @@
   padding-bottom: 15px;
 
   @media (min-width: @tablet-width) {
-    grid-column: 3/4;
+    grid-column: 4/5;
   }
 
   @media (min-width: @desktop-width) {
@@ -176,27 +177,6 @@
     grid-column: 3/4;
   }
 }
-
-// .products-extra__description {
-//   display: flex;
-//   justify-content: space-between;
-//   padding-bottom: 15px;
-
-//   @media (min-width: @tablet-width) {
-//     display: flex;
-//     justify-content: center;
-//     padding-bottom: 15px;
-
-//     p:first-child {
-//       padding-right: 49px;
-//     }
-//   }
-
-//   @media (min-width: @desktop-width) {
-//     padding-bottom: 0;
-//     padding-right: 40px;
-//   }
-// }
 
 .products-extra__order-button {
   grid-column: 1/3;
@@ -210,7 +190,7 @@
     line-height: 20px;
     padding: 10px 109px;
     margin: 0;
-    grid-column: 1/4;
+    grid-column: 1/5;
   }
 
   @media (min-width: @desktop-width) {
