--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -86,6 +86,14 @@
   }
 }
 
+// .page-footer__logo-text {
+//   @media (min-width: @tablet-width) {
+//     width: 149px;
+//     height: 26px;
+//   }
+// }
+
+
 .page-footer__link {
   text-decoration: none;
   padding: 0;
@@ -114,13 +122,6 @@
   @media (min-width: @tablet-width) {
     width: 113px;
     padding-right: 27px;
-  }
-}
-
-@media (min-width: @tablet-width) {
-  .page-footer__logo-text {
-    width: 128px;
-    height: 24px;
   }
 }
 
